Image adjustments and css grid alignment fixes

--- a/src/style/modules/_summit.scss
+++ b/src/style/modules/_summit.scss
@@ -405,6 +405,9 @@
     gap: 2em;
     justify-content: space-between;
     margin-bottom: 50px;
+    &.vancouver-featured-speakers-list {
+      gap: 3em;
+    }
     @media (max-width: 1300px) {
       grid-template-columns: 1fr 1fr 1fr 1fr;
     }
